# colandix

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  release.yml
colandix/: __init__.py  compliance.py  exceptions.py  logger.py  pipeline.py  redaction.py  result.py  scoring.py
colandix/detectors/: __init__.py  base.py  entropy.py  injection.py  ner.py  regex.py  topic.py
colandix/profiles/: __init__.py  dev.yaml  generique.yaml  juridique.yaml  loader.py  rh.yaml  sante.yaml  strict.yaml
docs/: architecture.md  compliance.md  contributing.md  index.md  quickstart.md  testing.md  triggers-par-profil.md
docs/stylesheets/: extra.css
examples/: admin_douanes.yaml  basic_usage.py  custom_profile.py  with_openai.py
notebooks/: demo_colandix.ipynb  tests_colandix.ipynb
tests/: __init__.py  conftest.py  test_compliance.py  test_logger.py  test_pipeline.py  test_profiles.py  test_redaction.py  test_result.py  test_scoring.py
tests/test_detectors/: __init__.py  test_base.py  test_entropy.py  test_injection.py  test_ner.py  test_regex.py  test_topic.py
